--- a/index.html
+++ b/index.html
@@ -34,36 +34,43 @@
         <section class="content-section">
             <!--Search Engine section-->
             <article id="search-engine-optimization" class="content">
-                <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
-                <h2>Search Engine Optimization</h2>
-                <p>
-                    The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-                </p>
+                <img src="./assets/images/search-engine-optimization.jpg"/>
+                <div class="content-info float-left">
+                    <h2>Search Engine Optimization</h2>
+                    <p>
+                        The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
+                    </p>
+                </div> 
             </article>
 
             <!--Online Reputation section-->
             <article id="online-reputation-management" class="content">
-                <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
-                <h2>Online Reputation Management</h2>
-                <p>
-                    The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
-                </p>
+                <img src="./assets/images/online-reputation-management.jpg"/>
+                <div class="content-info float-right">
+                    <h2>Online Reputation Management</h2>
+                    <p>
+                        The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
+                    </p>
+                </div>
+                
             </article>
 
             <!--Social Media section-->
             <article id="social-media-marketing" class="content">
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
-                <h2>Social Media Marketing</h2>
-                <p>
-                    Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
-                </p>
+                <div class="content-info float-left">
+                    <h2>Social Media Marketing</h2>
+                    <p>
+                        Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
+                    </p>
+                </div>
+                
             </article>
         </section>
 
         <section class="benefits">
-
             <!--Lead Generation section-->
-            <div class="benefit-lead">
+            <div>
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" />
                 <p>
@@ -72,7 +79,7 @@
             </div>
 
             <!--Benefit Brand section-->
-            <div class="benefit-brand">
+            <div>
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" />
                 <p>
@@ -81,7 +88,7 @@
             </div>
 
             <!--Benefit Cost section-->
-            <div class="benefit-cost">
+            <div>
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png"></img>
                 <p>
