--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </section>
 
         <!--Content-->
-        <section class="content-section">
+        <section id="content-section" class="contents">
             <!--Search Engine section-->
             <article id="search-engine-optimization" class="content">
                 <img src="./assets/images/search-engine-optimization.jpg"/>
@@ -44,27 +44,25 @@
             </article>
 
             <!--Online Reputation section-->
-            <article id="online-reputation-management" class="content">
-                <img src="./assets/images/online-reputation-management.jpg"/>
+            <article id="online-reputation-management" class="content">      
                 <div class="content-info float-right">
                     <h2>Online Reputation Management</h2>
                     <p>
                         The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
                     </p>
                 </div>
-                
+                <img src="./assets/images/online-reputation-management.jpg"/>  
             </article>
 
             <!--Social Media section-->
             <article id="social-media-marketing" class="content">
-                <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+                <img src="./assets/images/social-media-marketing.jpg"/>
                 <div class="content-info float-left">
                     <h2>Social Media Marketing</h2>
                     <p>
                         Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
                     </p>
                 </div>
-                
             </article>
         </section>
 
