--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./assets/css/style.css">
-        <title>Horiseon</title>
+        <title>Horiseon - Search Engine Optimization</title>
     </head>
     <body>
         <!--navigation-->
@@ -30,7 +30,7 @@
         <section class="hero">
         </section>
 
-        <!--Content-->
+        <!--Content--> 
         <section id="content-section" class="contents">
             <!--Search Engine section-->
             <article id="search-engine-optimization" class="content">
@@ -70,7 +70,7 @@
             <!--Lead Generation section-->
             <article>
                 <h3>Lead Generation</h3>
-                <img src="./assets/images/lead-generation.png" />
+                <img src="./assets/images/lead-generation.png" alt="Bringing Customers to the Website"/>
                 <p>
                     Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
                 </p>
@@ -79,7 +79,7 @@
             <!--Benefit Brand section-->
             <article>
                 <h3>Brand Awareness</h3>
-                <img src="./assets/images/brand-awareness.png" />
+                <img src="./assets/images/brand-awareness.png" alt="Increasing Visibility for the Brand"/>
                 <p>
                     Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
                 </p>
@@ -88,7 +88,7 @@
             <!--Benefit Cost section-->
             <article>
                 <h3>Cost Management</h3>
-                <img src="./assets/images/cost-management.png"></img>
+                <img src="./assets/images/cost-management.png" alt="Managing Costs">
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
